--- a/view.react/package.json
+++ b/view.react/package.json
@@ -21,7 +21,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "animate.css": "^4.1.1",
-    "axios": "^0.21.1",
+    "axios": "^1.6.4",
     "bootstrap": "^5.0.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
@@ -38,7 +38,6 @@
     "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "sass": "^1.35.2",
@@ -48,11 +47,13 @@
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "lint": "eslint ./src --ext .js --ext .jsx",
-    "lint-fix": "eslint ./src --ext .js --ext .jsx --fix"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "lint": "eslint ./src --ext .js --ext .jsx --ext .tsx",
+    "lint-fix": "eslint ./src --ext .js --ext .jsx --fix --ext .tsx"
   },
   "eslintConfig": {
     "extends": [
@@ -64,7 +65,11 @@
     ],
     "rules": {
       "simple-import-sort/imports": "error",
-      "simple-import-sort/exports": "error"
+      "simple-import-sort/exports": "error",
+      "testing-library/no-unnecessary-act": "off",
+      "testing-library/prefer-presence-queries": "off",
+      "testing-library/no-node-access": "off",
+      "testing-library/no-wait-for-multiple-assertions": "off"
     }
   },
   "browserslist": {
@@ -82,8 +87,15 @@
   "devDependencies": {
     "@types/react-notifications-component": "^3.1.1",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.0.0",
     "axios-mock-adapter": "^1.21.2",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jsdom": "^21.1.1",
+    "vite": "^4.3.2",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.30.1",
     "yarn": "^1.22.19"
   }
 }
